fixed alignment in home

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1550,7 +1550,7 @@ color: #999;}
 
 
 .mgmt-tm td, .mgmt-gl td {
-padding: 12px 5px 4px 5px;
+padding: 15px 5px 4px 5px;
 background: #fff;
 vertical-align: top;
     border-top: 1px solid #ccc;
